--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<h1>Login</h1>
+<form class="form" (ngSubmit)="onSubmit()" [formGroup]="userRegForm">
+  <div class="input">
+    <label for="email">
+      Email: <input type="email" formControlName="email"
+    /></label>
+  </div>
+  <div class="input">
+    <label for="password"
+      >Password: <input type="password" formControlName="password"
+    /></label>
+  </div>
+  <div style="text-align: center; color: red; padding: 5px" *ngIf="show">
+    {{ this.errorMsg }}
+  </div>
+  <div class="input">
+    <input type="submit" class="btn" />
+  </div>
+</form>
