hooked up registration and login with token

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,10 @@
 <header class="header">
   <h1>Resync Technical Test</h1>
   <nav>
-    <a routerLink="/">Home</a> | <a routerLink="/register">Register</a> |
-    <a routerLink="/login">Login</a>
+    <div>
+      <a routerLink="/">Home</a> | <a routerLink="/register">Register</a> |
+      <a routerLink="/login">Login</a>
+    </div>
+    <div></div>
   </nav>
 </header>
