Organisation edit done

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -4,7 +4,7 @@
   background: #0e4686;
   color: #fff;
   text-align: center;
-  padding: 10px;
+  padding: 2%;
   box-shadow: 5px 10px 10px 0 #afa6a6;
 }
 
