--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<h1>Login</h1>
+<h1 style="margin-top: 5%">Login</h1>
 <form class="form" (ngSubmit)="onSubmit()" [formGroup]="userRegForm">
   <div class="input">
     <label for="email">
