--- a/src/app/components/organisation/organisation.component.html
+++ b/src/app/components/organisation/organisation.component.html
@@ -77,18 +77,34 @@
       {{ errorMsg }}
       <span style="color: green">{{ saveMsg }}</span>
     </div>
-
-    <div class="input">
-      <button type="submit" class="btn">Submit</button>
-    </div>
+    <button type="submit" class="btn">Submit</button>
   </form>
-  <table mat-table [dataSource]="organisations" class="mat-elevation-z8">
+  <span style="color: green">{{ editMsg }}</span>
+  <table
+    mat-table
+    [dataSource]="organisations"
+    matSort
+    (matSortChange)="sortData($event)"
+    class="mat-elevation-z8"
+  >
     <ng-container
       [matColumnDef]="column"
       *ngFor="let column of displayedColumns; let i = index"
     >
-      <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-      <td mat-cell *matCellDef="let org">{{ org[dbColumns[i]] }}</td>
+      <th mat-sort-header="{{ column }}" mat-header-cell *matHeaderCellDef>
+        {{ column }}
+      </th>
+      <td mat-cell *matCellDef="let org">
+        <button
+          mat-button
+          (click)="openOrgDetails(org[dbColumns[i]])"
+          class="edit"
+          *ngIf="column === 'View'"
+        >
+          Edit
+        </button>
+        <div *ngIf="column !== 'View'">{{ org[dbColumns[i]] }}</div>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
