--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,4 +1,4 @@
-<h1>Register with your email</h1>
+<h1 style="margin-top: 5%">Register with your email</h1>
 <form class="form" (ngSubmit)="onSubmit()" [formGroup]="userRegForm">
   <div class="input">
     <label for="fName"
